--- a/css/extras.css
+++ b/css/extras.css
@@ -50,3 +50,11 @@ li #map_content {
   font:8em Helvetica;
   margin: 0 0 0 -40px;
 }
+.ui-dialog-contain {
+  width: 80%;
+  max-width: 400px;
+  margin: 10% auto 15px auto;
+  padding: 0;
+  position: relative;
+  top: -15px;
+}
