--- a/css/extras.css
+++ b/css/extras.css
@@ -8,18 +8,15 @@ i{
     height: 100%;
 }
 
-#map_content, #map_holder {
+#map_content, #mapbox_content, #map_holder {
     padding: 1%;
     width: 100%;
     height: 100%;
     overflow: hidden;
 }
-
-li #map_content {
-    padding: 1%;
-    width: 100%;
-    height: 200px;
-    overflow: hidden;
+.header_button{
+    float:right;
+    margin-right:5%'
 }
 
 
